--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=7000
 MONGODB_URL="mongodb+srv://anurag:anurag75@cluster0.34bmj85.mongodb.net/Mern-Food-Ecom"
 JWT_SECRET="njkfifgy7645765fhg"
+FRONTED_URL="http://localhost:3000"
